@@ -9591,17 +9591,17 @@ part
 
          loadpage_lo     = "  0   1   0   0    0   0   0   0",
                            "  0   0   0   x    x   x   x   x",
-                           "  x   x   x   x   a3  a2  a1  a0",
+                           "  x   x   x  a4   a3  a2  a1  a0",
                            "  i   i   i   i    i   i   i   i";
 
          loadpage_hi     = "  0   1   0   0    1   0   0   0",
                            "  0   0   0   x    x   x   x   x",
-                           "  x   x   x   x   a3  a2  a1  a0",
+                           "  x   x   x  a4   a3  a2  a1  a0",
                            "  i   i   i   i    i   i   i   i";
 
          writepage       = "  0  1  0  0   1   1  0  0",
                            "  0  0  0  0   0 a10 a9 a8",
-                           " a7 a6 a5 a4   x   x  x  x",
+                           " a7 a6 a5  x   x   x  x  x",
                            "  x  x  x  x   x   x  x  x";
 
 	mode		= 0x41;
